--- a/services/calendar.html
+++ b/services/calendar.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
     <link rel="stylesheet" href="style.css">
-    <title>Calendar</title>
+    <title>Calendrier</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -495,25 +495,25 @@ background-color: black;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-  <div class="sidebar">
+    <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -525,11 +525,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -541,9 +541,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -555,22 +555,22 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
     <ul class="breadcrumb">
-      <li><a href="/home.html">Website</a></li>
-      <li><a href="/web-app.html">Web App</a></li>
-      <li><a href="">Services</a></li>
-      <li>Calculator</li>
-    </ul>
+<li><a href="/home.html">Site Web</a></li>
+       <li><a href="/web-app.html">Application Web</a></li>
+       <li><a href="">Services</a></li>
+       <li>Calculatrice</li>
+     </ul>
 <br><br>
-<h1 style="text-align:left;font-size:35px;">Calendar</h1>
+<h1 style="text-align:left;font-size:35px;">Calendrier</h1>
 <br>
 <div class="softcard">
     <div class="calendar-bar">
@@ -580,20 +580,20 @@ background-color: black;
     </div>
     <div class="calendar">
       <div class="weekdays-name">
-        <div class="days-name">Sa</div>
-        <div class="days-name">Su</div>
-        <div class="days-name">Mo</div>
-        <div class="days-name">Tu</div>
-        <div class="days-name">We</div>
-        <div class="days-name">Th</div>
-        <div class="days-name">Fr</div>
-      </div>
-      <div class="calendar-days"></div>
-    </div>
-    <div class="goto-buttons">
-      <button type="button" class="btn prev-year">Prev Year</button>
-      <button type="button" class="btn today">Today</button>
-      <button type="button" class="btn next-year">Next Year</button>
+<div class="days-name">samedi</div>
+         <div class="days-name">dimanche</div>
+         <div class="days-name">Lundi</div>
+         <div class="days-name">mardi</div>
+         <div class="days-name">mercredi</div>
+         <div class="days-name">jeudi</div>
+         <div class="days-name">vendredi</div>
+       </div>
+       <div class="calendar-days"></div>
+     </div>
+     <div class="goto-buttons">
+       <button type="button" class="btn prev-year">Année précédente</button>
+       <button type="button" class="btn aujourd'hui">Aujourd'hui</button>
+       <button type="button" class="btn next-year">L'année prochaine</button>
     </div>
   </div>
 <script>
