--- a/services/audio-recorder.html
+++ b/services/audio-recorder.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
     <link rel="stylesheet" href="style.css">
-    <title>Audio Recorder</title>
+    <title>Enregistreur audio</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -621,25 +621,25 @@ background-color: black;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-<div class="sidebar">
+  <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -651,11 +651,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -667,9 +667,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -681,19 +681,19 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
     <section class="home-section">
 <ul class="breadcrumb">
-  <li><a href="/home.html">Website</a></li>
-  <li><a href="/web-app.html">Web App</a></li>
-  <li><a href="">Services</a></li>
-  <li>Audio Recorder</li>
+<li><a href="/home.html">Site Web</a></li>
+   <li><a href="/web-app.html">Application Web</a></li>
+   <li><a href="">Services</a></li>
+  <li>Enregistreur audio</li>
 </ul>
 <br>
 <audio id="audio"></audio>
@@ -711,22 +711,22 @@ background-color: black;
                     </g>
                  </svg>
             </div>
-        <h1 style="color:red;text-align:center;">Audio Recorder</h1>
+        <h1 style="color:red;text-align:center;">Enregistreur audio</h1>
             <div class="audio-controler">
                 <div id="playPauseBtn" class="button">
 
                 </div>
                 <div class="btn-info">
-                    <p>Play/Pause</p>
-                </div>
-            </div>
-            <div class="record-controler">
-                <div id="recordbtn" class="button">
+                     <p>Lecture/Pause</p>
+                 </div>
+             </div>
+             <div class="record-controler">
+                 <div id="recordbtn" class="button">
 
-                </div>
-                <div class="btn-info">
-                    <p>record</p>
-                </div>
+                 </div>
+                 <div class="btn-info">
+                     <p>Enregistrer</p>
+                 </div>
             </div>
 
             <div class="downloader">
@@ -887,7 +887,7 @@ function downloadAudio(){
         window.URL.revokeObjectURL(url);
         
     }else {
-      console.log('No Data');
+      console.log('Pas de données');
       
     }
 }
@@ -895,8 +895,8 @@ function downloadAudio(){
         <br><br>
   <hr>
   <br>
-    <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
