--- a/services/audiobooks.html
+++ b/services/audiobooks.html
@@ -453,23 +453,23 @@ background-color: black;
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -481,11 +481,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -497,9 +497,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -511,57 +511,57 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
 <ul class="breadcrumb">
-  <li><a href="home.html">Website</a></li>
-  <li><a href="web-app.html">Web App</a></li>
-  <li><a href="">Services</a></li>
-  <li>Audiobooks</li>
+<li><a href="home.html">Site Web</a></li>
+   <li><a href="web-app.html">Application Web</a></li>
+   <li><a href="">Services</a></li>
+   <li>Livres audio</li>
 </ul>
-    <br>
-    <h2>Audiobooks Directory</h2>
-<p>Welcome to the audiobooks directory! A directory of all audiobooks published onto JstMStudio Website. A place to listen to audiobooks for free. A place to find for audiobooks to listen to when you are busy or couldn't read.</p>
+     <br>
+     <h2>Répertoire des livres audio</h2>
+<p>Bienvenue dans le répertoire des livres audio ! Un répertoire de tous les livres audio publiés sur le site Web de JstMStudio. Un endroit pour écouter des livres audio gratuitement. Un endroit où trouver des livres audio à écouter lorsque vous êtes occupé ou que vous ne savez pas lire.</p>
 <br>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for audiobooks..." title="Type in a name">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Rechercher des livres audio..." title="Saisir un nom">
 
 <ul id="myUL">
-  <li><button type="button" class="collapsible">Book 1</button>
+  <li><button type="button" class="collapsible">Livre 1</button>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   <audio controls>
   <source src="#" type="audio/mpeg">
-Your browser does not support the audio element.
+Votre navigateur ne supporte pas l'élément audio.
 </audio>
 </div></li>
-  <li><button type="button" class="collapsible">Book 2</button>
+  <li><button type="button" class="collapsible">Livre 2</button>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   <audio controls>
   <source src="#" type="audio/mpeg">
-Your browser does not support the audio element.
+Votre navigateur ne supporte pas l'élément audio.
 </audio>
 </div></li>
-  <li><button type="button" class="collapsible">Book 3</button>
+  <li><button type="button" class="collapsible">Livre 3</button>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   <audio controls>
   <source src="#" type="audio/mpeg">
-Your browser does not support the audio element.
+Votre navigateur ne supporte pas l'élément audio.
 </audio>
 </div></li>
-  <li><button type="button" class="collapsible">Book 4</button>
+  <li><button type="button" class="collapsible">Livre 4</button>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   <audio controls>
   <source src="#" type="audio/mpeg">
-Your browser does not support the audio element.
+Votre navigateur ne supporte pas l'élément audio.
 </audio>
 </div></li>
 </ul>
@@ -602,8 +602,8 @@ for (i = 0; i < coll.length; i++) {
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
