--- a/services/contact.html
+++ b/services/contact.html
@@ -544,25 +544,25 @@ background-color: black;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-  <div class="sidebar">
+    <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -574,11 +574,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -590,9 +590,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -604,50 +604,50 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
     <ul class="breadcrumb">
-      <li><a href="/home.html">Website</a></li>
-      <li><a href="/web-app.html">Web App</a></li>
-      <li><a href="">Services</a></li>
-      <li>Contact</li>
-    </ul>
-    <br>
+      <li><a href="/home.html">Site Web</a></li>
+       <li><a href="/web-app.html">Application Web</a></li>
+       <li><a href="">Services</a></li>
+       <li>Contact</li>
+     </ul>
+     <br>
 <br>
 <div style="color:white;">
-<h1 style="text-decoration: none;color:blue;">Contact Management System</h1>
+<h1 style="text-decoration: none;color:blue;">Système de gestion des contacts</h1>
 <br>
         <div class="cms-table-container" id="cmsTableContainer">
             <div class="cms-table-row">
-                <div class="cms-table-column cms-name cms-header">Name</div>
-                <div class="cms-table-column cms-phone cms-header">Phone</div>
-                <div class="cms-table-column cms-address cms-header">Address</div>
+<div class="cms-table-column cms-name cms-header">Nom</div>
+                <div class="cms-table-column cms-phone cms-header">Téléphone</div>
+                <div class="cms-table-column cms-address cms-header">Adresse</div>
                 <div class="cms-table-column cms-header cms-add-entry-column" id="cmsAddNewEntry">+</div>
             </div>
-            <span id="tableBody"></span>    
+            <span id="tableBody"></span>
         </div>
 
         <div class="disable-modal" id="backdrop"></div>
         <div class="disable-modal" id="newPersonModal">
-                <h1>Add New Person</h1>
+                <h1>Ajouter une nouvelle personne</h1>
 
-                <label for="newPersonName">Name</label>
-                <input type="text" id="newPersonName">
+                <label for="newPersonName">Nom</label>
+                <input type="text" id="nouveauNomPersonne">
 
-                <label for="newPersonPhone">Phone</label>
+                <label for="newPersonPhone">Téléphone</label>
                 <input type="text" id="newPersonPhone">
 
-                <label for="newPersonAddress">Address</label>
+                <label for="newPersonAddress">Adresse</label>
                 <input type="text" id="newPersonAddress">
 
-                <button id="newPersonCancelBtn">Cancel</button>
-                <button id="newPersonSubmitBtn">Submit</button>
+                <button id="newPersonCancelBtn">Annuler</button>
+                <button id="newPersonSubmitBtn">Envoyer</button>
         </div>
         </div>
         <script>
@@ -799,7 +799,7 @@ let refreshDOMTable = () => {
     for (let i = 0; i < deleteBtns.length; i++) {
         deleteBtns[i].addEventListener('click', ($event) => {
             let nameToDelete = $event.target.parentElement.children[0].innerText;
-            let isSure = window.confirm('Are you sure you want to delete ' + nameToDelete + '?');
+            let isSure = window.confirm('Etes-vous sûr que vous voulez supprimer ' + nameToDelete + '?');
             if(isSure)
                 deleteUserFromTable(nameToDelete);
         })
@@ -837,8 +837,8 @@ init();
         <br><br>
         <hr>
           <br>
-          <h1>Themes</h1>
-        <p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
         <br>
         <div style="float:left;text-align:center;padding:10px;">
         <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
