--- a/services/dictionary.html
+++ b/services/dictionary.html
@@ -558,23 +558,23 @@ background-color: black;
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -586,11 +586,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -602,9 +602,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -616,29 +616,29 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
     <ul class="breadcrumb">
-      <li><a href="/home.html">Website</a></li>
-      <li><a href="/web-app.html">Web App</a></li>
-      <li><a href="">Services</a></li>
-      <li>Dictionary</li>
-    </ul>
-    <br>
-          <div class="wrapper" style="text-align: center;">
-      <h1 style="text-align: center;">JstMStudio Dictionary</h1>
-      <div class="search">
-        <input type="text" placeholder="Search a word" required spellcheck="false">
-        <i class="fas fa-search"></i>
-        <span class="material-icons">close</span>
-      </div>
-      <p class="info-text">Type any existing word and press enter to get meaning, example, synonyms, etc.</p>
+      <li><a href="/home.html">Site Web</a></li>
+       <li><a href="/web-app.html">Application Web</a></li>
+       <li><a href="">Services</a></li>
+       <li>Dictionnaire</li>
+     </ul>
+     <br>
+           <div class="wrapper" style="text-align : center ;">
+       <h1 style="text-align: center;">Dictionnaire JstMStudio</h1>
+       <div class="search">
+         <input type="text" placeholder="Rechercher un mot" required spellcheck="false">
+         <i class="fas fa-search"></i>
+         <span class="material-icons">fermer</span>
+       </div>
+       <p class="info-text">Tapez n'importe quel mot existant et appuyez sur Entrée pour obtenir une signification, un exemple, des synonymes, etc.</p>
       <ul>
         <li class="word">
           <div class="details">
@@ -650,19 +650,19 @@ background-color: black;
         <div class="content">
           <li class="meaning">
             <div class="details">
-              <p>Meaning</p>
+              <p>Sens</p>
               <span>___</span>
             </div>
           </li>
           <li class="example">
             <div class="details">
-              <p>Example</p>
+              <p>Exemple</p>
               <span>___</span>
             </div>
           </li>
           <li class="synonyms">
             <div class="details">
-              <p>Synonyms</p>
+              <p>Synonymes</p>
               <div class="list"></div>
             </div>
           </li>
@@ -717,7 +717,7 @@ function fetchApi(word){
     infoText.innerHTML = `Searching the meaning of <span>"${word}"</span>`;
     let url = `https://api.dictionaryapi.dev/api/v2/entries/en/${word}`;
     fetch(url).then(response => response.json()).then(result => data(result, word)).catch(() =>{
-        infoText.innerHTML = `Can't find the meaning of <span>"${word}"</span>. Please, try to search for another word.`;
+        infoText.innerHTML = `Impossible de trouver la signification de <span>"${word}"</span>. Veuillez essayer de rechercher un autre mot.`;
     });
 }
 
@@ -741,15 +741,15 @@ removeIcon.addEventListener("click", ()=>{
     searchInput.focus();
     wrapper.classList.remove("active");
     infoText.style.color = "#9A9A9A";
-    infoText.innerHTML = "Type any existing word and press enter to get meaning, example, synonyms, etc.";
+    infoText.innerHTML = "Tapez n'importe quel mot existant et appuyez sur Entrée pour obtenir une signification, un exemple, des synonymes, etc.";
 });
 
 </script>
 <br><br>
         <hr>
           <br>
-          <h1>Themes</h1>
-        <p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
         <br>
         <div style="float:left;text-align:center;padding:10px;">
         <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
