--- a/services/languagetranslator.html
+++ b/services/languagetranslator.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
     <link rel="stylesheet" href="style.css">
-    <title>Language Translator</title>
+    <title>Traducteur de langue</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <style>
@@ -576,83 +576,83 @@ background-color: black;
 </style>
   </head>
   <body>
-    <div class="sidebar">
-      <div class="logo-details">
-          <div class="logo_name">JstMStudio</div>
-          <i class='bx bx-menu' id="btn" ></i>
-      </div>
-      <ul class="nav-list">
-        <li>
-          <a href="home.html">
-            <i class='bx bx-home'></i>
-            <span class="links_name">Home</span>
-          </a>
-           <span class="tooltip">Home</span>
-        </li>
-        <li>
-         <a href="about.html">
-           <i class='bx bx-info-circle'></i>
-           <span class="links_name">About</span>
-         </a>
-         <span class="tooltip">About</span>
-       </li>
-       <li>
-       <li>
-         <a href="documentation.html">
-           <i class='bx bxs-info-square'></i>
-           <span class="links_name">Documentation</span>
-         </a>
-         <span class="tooltip">Documentation</span>
-       </li>
-       <li>
-       <li>
-         <a href="project.html">
-           <i class='bx bxs-briefcase-alt-2'></i>
-           <span class="links_name">Project</span>
-         </a>
-         <span class="tooltip">Project</span>
-       </li>
-       <li>
-         <a href="client.html">
-          <i class='bx bx-user'></i>
-           <span class="links_name">Client</span>
-         </a>
-         <span class="tooltip">Client</span>
-       </li>
-       <li>
-         <a href="web-app.html">
-          <i class='bx bx-log-in'></i>
-           <span class="links_name">Web App</span>
-         </a>
-         <span class="tooltip">Web App</span>
-       </li>
-        <li>
-         <a href="api.html">
-           <i class='bx bx-extension'></i>
-           <span class="links_name">API</span>
-         </a>
-         <span class="tooltip">API</span>
-       </li>
-       <li>
-         <a href="store.html">
-           <i class='bx bx-store-alt'></i>
-           <span class="links_name">Store</span>
-         </a>
-         <span class="tooltip">Store</span>
-       </li>
-       <li>
-      </ul>
+      <div class="sidebar">
+    <div class="logo-details">
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
+        <i class='bx bx-menu' id="btn" ></i>
     </div>
+    <ul class="nav-list">
+      <li>
+        <a href="home.html">
+          <i class='bx bx-home'></i>
+          <span class="links_name">Accueil</span>
+        </a>
+         <span class="tooltip">Accueil</span>
+      </li>
+      <li>
+       <a href="about.html">
+         <i class='bx bx-info-circle'></i>
+         <span class="links_name">À propos</span>
+       </a>
+       <span class="tooltip">À propos</span>
+     </li>
+     <li>
+     <li>
+       <a href="documentation.html">
+         <i class='bx bxs-info-square'></i>
+         <span class="links_name">Documentation</span>
+       </a>
+       <span class="tooltip">Documentation</span>
+     </li>
+     <li>
+     <li>
+       <a href="projet.html">
+         <i class='bx bxs-briefcase-alt-2'></i>
+         <span class="links_name">Projet</span>
+       </a>
+       <span class="tooltip">Projet</span>
+     </li>
+     <li>
+       <a href="client.html">
+        <i class='bx bx-user'></i>
+         <span class="links_name">Client</span>
+       </a>
+       <span class="tooltip">Client</span>
+     </li>
+     <li>
+       <a href="web-app.html">
+        <i class='bx bx-log-in'></i>
+         <span class="links_name">Application Web</span>
+       </a>
+       <span class="tooltip">Application Web</span>
+     </li>
+      <li>
+       <a href="api.html">
+         <i class='bx bx-extension'></i>
+         <span class="links_name">API</span>
+       </a>
+       <span class="tooltip">API</span>
+     </li>
+     <li>
+       <a href="store.html">
+         <i class='bx bx-store-alt'></i>
+         <span class="links_name">Magasin</span>
+       </a>
+       <span class="tooltip">Magasin</span>
+     </li>
+     <li>
+    </ul>
+  </div>
     <section class="home-section">
       <ul class="breadcrumb">
-        <li><a href="/home.html">Website</a></li>
-        <li><a href="/web-app.html">Web App</a></li>
-        <li><a href="">Services</a></li>
-        <li>Language Translator</li>
-      </ul>
-  <br>
-    <div class="container">
-      <h1>Language Translator</h1>
+        <li><a href="/home.html">Site Web</a></li>
+         <li><a href="/web-app.html">Application Web</a></li>
+         <li><a href="">Services</a></li>
+         <li>Traducteur de langue</li>
+       </ul>
+   <br>
+     <div class="container">
+       <h1>Traducteur de langue</h1>
       <div class="wrapper">
         <div class="text-input">
           <textarea spellcheck="false" class="from-text" placeholder="Enter text"></textarea>
@@ -676,7 +676,7 @@ background-color: black;
           </li>
         </ul>
       </div>
-      <button>Translate Text</button>
+      <button>Traduire le texte</button>
     </div>
     <script>
       const countries = {
@@ -886,8 +886,8 @@ function myFunction() {
 <br><br>
 <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
