--- a/services/weather.html
+++ b/services/weather.html
@@ -662,25 +662,25 @@ background-color: black;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-<div class="sidebar">
+  <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -692,11 +692,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -708,9 +708,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -722,27 +722,27 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
 <ul class="breadcrumb">
-  <li><a href="/home.html">Website</a></li>
-  <li><a href="/web-app.html">Web App</a></li>
-  <li><a href="">Services</a></li>
-  <li>Weather</li>
+<li><a href="/home.html">Site Web</a></li>
+   <li><a href="/web-app.html">Application Web</a></li>
+   <li><a href="">Services</a></li>
+   <li>Météo</li>
 </ul>
 <br>
 <section class="top-banner">
   <div class="container">
-    <h1 class="heading">Weather</h1>
+    <h1 class="heading">Météo</h1>
     <form>
-      <input type="text" placeholder="Search for a city" autofocus style="height:100%;">
-      <button type="submit">SUBMIT</button>
+      <input type="text" placeholder="Rechercher une ville" autofocus style="height:100%;">
+      <button type="submit">NOUS FAIRE PARVENIR</button>
       <span class="msg"></span>
     </form>
   </div>
@@ -827,7 +827,7 @@ form.addEventListener("submit", e => {
       list.appendChild(li);
     })
     .catch(() => {
-      msg.textContent = "Please search for a valid city 😩";
+      msg.textContent = "Veuillez rechercher une ville valide 😩";
     });
 
   msg.textContent = "";
@@ -838,8 +838,8 @@ form.addEventListener("submit", e => {
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
